--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,23 @@
-.idea
-bin
-cmake-build-*
-obj
-venv
-*.pyc
-*.swp
+.DS_Store
+node_modules
+/dist
+backend/wwwroot
 
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+/cypress/integration/examples/
